--- a/GMS.Web.Admin/GMS.Web.Admin.csproj
+++ b/GMS.Web.Admin/GMS.Web.Admin.csproj
@@ -1280,6 +1280,11 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="sql\GMSAccount.sql" />
+    <Content Include="sql\GMSCms.sql" />
+    <Content Include="sql\GMSCrm.sql" />
+    <Content Include="sql\GMSLog.sql" />
+    <Content Include="sql\GMSOA.sql" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
